--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,6 @@ services:
     build: .
     ports:
       - '80:5000'
-    environment:
-      - GEMINI_KEY
+    env_file:
+      - ".env"
     container_name: metadata_gen
